# DA-SMTP

./: .deployment-info.md  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.json
.claude/rules/: ai-payload.md  db-access.md  flask-routes.md  migrations.md
docs/: AGENT_BRIEFING.md  H24_RUNBOOK.md  ai_assistant.md  guida_funzionamento.md  operations.md  rule_engine_v2.md
docs/adr/: 0000-template.md
docs/manuale_utente/: MANUALE_UTENTE.md
domarc_relay_admin/: __init__.py  app.py  cli.py  config.py  customer_groups_virtuals.py  firewall_manager.py  h24_code_extractor.py  import_from_manager.py  manual_generator.py  module_manager.py  retention.py  secrets_manager.py
domarc_relay_admin/ai_assistant/: __init__.py  decisions.py  error_aggregator.py  pii_redactor.py  router.py  rule_generator.py  rule_proposer.py  taxonomy.py
domarc_relay_admin/auth/: __init__.py
domarc_relay_admin/customer_sources/: __init__.py  base.py  local_source.py  postgres_source.py  rest_source.py  sqlite_source.py  stormshield_source.py  yaml_source.py
domarc_relay_admin/customer_sync/: __init__.py  base.py  csv_file.py  engine.py  json_url.py  mapper.py  mssql.py  postgres.py  scheduler.py
domarc_relay_admin/migrations/: 001_initial.sqlite.sql  002_routes_domains_addresses.sqlite.sql  003_canonical_profiles.sqlite.sql  004_addresses_full_schema.sqlite.sql  005_drop_addresses_to.sqlite.sql  006_restore_addresses_to.sqlite.sql  007_users_roles_tenant.sqlite.sql  008_rules_match_from_domain.sqlite.sql  009_rules_match_customer_exception.sqlite.sql  010_rule_groups.pg.sql  010_rule_groups.sqlite.sql  011_privacy_bypass.pg.sql  011_privacy_bypass.sqlite.sql  012_ai_assistant.sqlite.sql  013_secrets_modules_ui.sqlite.sql  014_ai_shadow_audit.sqlite.sql  015_ai_error_clusters_fingerprint.sqlite.sql  016_ai_proposal_settings.sqlite.sql  017_ai_proposals_fingerprint.sqlite.sql  018_customer_groups.sqlite.sql  019_customers_pg_cache.sqlite.sql  020_contract_type.sqlite.sql  021_aggregations_delay_minutes.sqlite.sql  022_h24_authorization_flow.sqlite.sql  023_rule_description.sqlite.sql  024_h24_target_source_email.sqlite.sql  025_recipient_groups.sqlite.sql  026_h24_tracking_extended.sqlite.sql  027_rules_recipient_match.sqlite.sql  028_customer_sync_sources.sqlite.sql  029_rule_sets.sqlite.sql  030_shadow_recipient_groups.sqlite.sql  031_shadow_domain_routing.sqlite.sql  033_shadow_rules.sqlite.sql  034_group_membership_rules.sqlite.sql  035_simplify_rules_to_group_based.sqlite.sql  036_thread_tracking.sqlite.sql  037_membership_require_contract_active.sqlite.sql  038_domain_resolve_strategy.sqlite.sql  039_ai_rule_generator_job.sqlite.sql  (+4 more)
domarc_relay_admin/routes/: __init__.py  activity.py  aggregations.py  ai.py  ai_rule_wizard.py  api.py  auth_codes.py  codes_h24.py  customer_groups.py  customer_sync.py  customers.py  domains.py  events.py  firewall.py  group_mapping.py  h24_codes.py  infrastructure.py  integrations.py  manual.py  metrics.py  privacy_bypass.py  profiles.py  queue.py  recipients.py  relay_acl.py  rule_sets.py  rules.py  secrets_modules.py  service_hours.py  shadow.py  templates.py  users.py
domarc_relay_admin/rules/: __init__.py  action_map_schema.py  evaluator.py  flatten.py  inheritance.py  legacy_evaluator.py  validators.py  wizard_presets.py
domarc_relay_admin/storage/: __init__.py  base.py  postgres_impl.py  sqlite_impl.py
domarc_relay_admin/tenants/: __init__.py
installer/: README.md  install.sh  make-listener-bundle.sh
installer/backup-restore/: domarc-backup.py  domarc-restore.py
installer/lib/: 01-os-prep.sh  02-users-systemd.sh  03-nginx-https.sh  04-app-deploy.sh  (+1 more)
scripts/: anonymize_customers_screenshot.py  anonymize_screenshots.py  capture_user_manual_screenshots.py  seed_baseline_rules.py  seed_demo_group.py
services/smtp_listener/: README.md  pyproject.toml
services/smtp_listener/conf/: relay.yaml.example  relay_routes.yaml.example
services/smtp_listener/relay/: __init__.py  __main__.py  actions.py  aggregations.py  auto_reply.py  config.py  forwarder.py  listener.py  manager_client.py  parser.py  pipeline.py  rules.py  scheduler.py  service_hours.py  storage.py  sync.py
services/smtp_listener/relay/templates/: assistance_redirect.txt  out_of_hours.txt
systemd/: domarc-backup.service  domarc-backup.timer  domarc-smtp-relay-admin.service
tests/: conftest.py  test_activity_helpers.py  test_ai_dao.py  test_ai_error_aggregator.py  test_ai_provider_claude.py  test_ai_router.py  test_ai_rule_proposer.py  test_dao_groups.py  test_flatten.py  test_inheritance.py  test_manual_generator.py  test_module_manager.py  test_pii_redactor.py  test_queue.py  test_rule_engine_parity.py  test_validators.py
(+111 files in other folders)
