[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stormshield-smtp-relay"
version = "0.1.0"
description = "SMTP relay autonomo: riceve email, applica regole sincronizzate via API, inoltra/redirige/quarantine. Disaccoppiato dall'applicativo manager."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Domarc", email = "info@domarc.it" }
]
dependencies = [
    "aiosmtpd>=1.4.6,<2.0",
    "httpx>=0.27,<1.0",
    "PyYAML>=6.0,<7.0",
    "Jinja2>=3.1,<4.0",
    "dnspython>=2.4,<3.0",
    "pydantic>=2.5,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[project.scripts]
relay = "relay.__main__:main"

[tool.setuptools]
packages = ["relay"]

[tool.setuptools.package-data]
relay = ["templates/*.html", "templates/*.txt"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
